# quarks

./: .cproject  .gitignore  .project  .sconsign.dblite  README.md  SConstruct
Debug/: makefile  sources.mk
houdini_files/: cloth_demo.hipnc  cloth_demo_a_01.hip  cloth_demo_a_02.hip  cloth_demo_a_03.hip  cloth_demo_a_04.hip  cloth_demo_a_05.hip  cloth_demo_a_06.hip  cloth_demo_a_07.hip  cloth_demo_a_08.hip  cloth_demo_a_09.hip  cloth_demo_a_10.hip  cloth_demo_a_11.hip  cloth_demo_a_11.hipnc  collision_responce_test_01.hip  collision_responce_test_02.hip  force_demo.hipnc  force_demo_a_01.hip  force_demo_a_02.hip  force_demo_a_03.hip  force_demo_a_04.hip  force_demo_a_05.hip  quarks_test_1.hip  (+24 more)
src/: CMakeLists.txt  SConscript
src/base_types/: CommonTypes.h  Particle.cpp  Particle.h  SConscript  Spring.cpp  Spring.h
src/collisions/: Collision.cpp  Collision.h  CollisionData.cpp  CollisionData.h  SConscript
src/forces/: DragForce.cpp  DragForce.h  Force.cpp  Force.h  ForceData.cpp  ForceData.h  ForceFactory.cpp  ForceFactory.h  NoiseForce.cpp  NoiseForce.h  SConscript  SConscript~  UniformForce.cpp  UniformForce.h  VDBForce.cpp  VDBForce.h  VortexForce.h
src/houdini/: AttribManager.cpp  AttribManager.h  HQAdapter.cpp  HQAdapter.h  SConscript_Shared  SConscript_Static  SOP_Quarks.C  SOP_Quarks.h
src/solver/: ForceManager.cpp  ForceManager.h  OdeSolver.cpp  OdeSolver.h  ParticleSystem.cpp  ParticleSystem.h  SConscript  SoftBodyManager.cpp  SoftBodyManager.h  SourceManager.cpp  SourceManager.h
src/sources/: SConscript  SoftBodyData.cpp  SoftBodyData.h  SoftBodySource.cpp  SoftBodySource.h  Source.cpp  Source.h  SourceData.cpp  SourceData.h  SourceFactory.cpp  SourceFactory.h  SphereSource.cpp  SphereSource.h  VDBSource.cpp  VDBSource.h
src/unittest/: TestHoudini  TestHoudini.cpp  TestVector  TestVector.cpp
(+61 files in other folders)
